<resources>
    <string name="app_name">Ahadi</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_spalash">spalash</string>
    <string name="title_activity_login">login</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="login_label">Verify now</string>
    <string name="signup_label">Need account ? Register now</string>
    <string name="no_account_label">No account yet? Create one</string>
    <string name="ahadi_de">Ahadi</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Verify</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>
    <string name="gothere">Go there</string>
    <string name="lbl_you_are_at">YOU ARE AT</string>
    <string name="btn_get_location">GET MY LOCATION</string>
    <string name="btn_start_location_updates">START LOCATION UPDATES</string>
    <string name="btn_stop_location_updates">STOP LOCATION UPDATES</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
    <string name="title_activity_sms">SmsActivity</string>
    <string name="action_logout">Logout</string>
    <string name="msg_enter_mobile">Enter your mobile number to get started!</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_mobile">Mobile</string>
    <string name="lbl_next">NEXT</string>
    <string name="msg_sit_back">Sit back &amp; Relax! while we verify your mobile number</string>
    <string name="msg_manual_otp">(Enter the OTP below in case if we fail to detect the SMS automatically)</string>
    <string name="lbl_enter_otp">Enter OTP</string>
    <string name="lbl_submit">SUBMIT</string>
    <string name="mobilehint">Mobile no</string>
    <string name="namehint">Fullname</string>
    <string name="addresshint">Address</string>
    <string name="adharhint">Adharcard no</string>
    <string name="fillfromhint">Fill this from for complete registration process</string>
    <string name="GPSAlertDialogTitle">GPS is setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>
    <string name="cancel">Cancel</string>
    <string name="tab_1">Home</string>
    <string name="tab_2">Notifications</string>
    <string name="tab_3">Settings</string>
    <string name="title_activity_cartactivaty">cartactivaty</string>
    <string name="orderno">Order no :- #253698</string>
    <string name="orderitemslabel">Order items</string>
    <string name="orderstatuslabel">Order status :</string>
    <string name="rate">Rate this service now</string>
    <string name="title_activity_settings">settings</string>
    <string name="rateourservice">Rate our service</string>
    <string name="labelsettings">Profile</string>
    <string name="aboutuslabel">About us</string>
    <string name="rateuslabel">Rete this app</string>
    <string name="feedbacklabel">Feddback now</string>
    <string name="callnowrequeestlabel">Request for call</string>
    <string name="callnow">Call now</string>


    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

</resources>
