<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    android:id="@+id/activity_settings"
    tools:context="in.ahadi.luci.ahadi.settings">



    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="fill_parent"
        android:layout_height="58dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ToolBarStyle"
        android:titleTextColor="#ffffff"
        app:popupTheme="@style/ActionBarPopupThemeOverlay"
        tools:ignore="UnusedAttribute">
    </android.support.v7.widget.Toolbar>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar1"
        android:padding="10dp"
        android:orientation="vertical">



        <LinearLayout
            android:id="@+id/profilesetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingLeft="10dp"
            android:background="@drawable/listsubitemborder"
            android:paddingBottom="15dp"

            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:textColor="#191919"
                android:text="@string/labelsettings"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/aboutus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingLeft="10dp"
            android:background="@drawable/listsubitemborder"
            android:paddingBottom="15dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:textColor="#191919"
                android:text="@string/aboutuslabel"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rateapp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingLeft="10dp"
            android:background="@drawable/listsubitemborder"
            android:paddingBottom="15dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:textColor="#191919"
                android:text="@string/rateuslabel"
                />
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/feednow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingLeft="10dp"
            android:background="@drawable/listsubitemborder"
            android:paddingBottom="15dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:textColor="#191919"
                android:text="@string/feedbacklabel"
                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/requstcall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingLeft="10dp"
            android:visibility="gone"
            android:background="@drawable/listsubitemborder"
            android:paddingBottom="15dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:textColor="#191919"
                android:text="@string/callnowrequeestlabel"
                />
        </LinearLayout>


    </LinearLayout>

    <com.roughike.bottombar.BottomBar
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        />








</RelativeLayout>
