<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_singleorder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.ahadi.luci.ahadi.singleorder">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="fill_parent"
        android:layout_height="58dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ToolBarStyle"
        android:titleTextColor="#ffffff">
    </android.support.v7.widget.Toolbar>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true"
        style="?android:attr/progressBarStyle"
        android:layout_weight="2"
        >
    </ProgressBar>

    <ScrollView
        android:id="@+id/sview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar1"
        android:visibility="invisible"
        tools:ignore="UselessParent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ordernofield"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/orderno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="#000000" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/orderstatusfield"
                android:layout_width="match_parent"
                android:layout_below="@+id/ordernofield"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
                <TextView
                    android:id="@+id/orderstatusf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="#000000"
                    android:text="@string/orderstatuslabel"
                    tools:ignore="SmallSp" />
                <TextView
                    android:id="@+id/orderstatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginLeft="10dp"
                    android:textColor="#000000"
                    android:text="Waiting for vendor"
                    tools:ignore="HardcodedText,RtlHardcoded" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/orderitemlabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/orderstatusfield"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="#000000"
                    android:text="@string/orderitemslabel"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/androidcartitems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/orderitemlabel"
                tools:ignore="DisableBaselineAlignment">

                <com.github.paolorotolo.expandableheightlistview.ExpandableHeightListView
                    android:id="@+id/list"
                    android:scrollbars="none"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:divider="@color/list_divider"
                    android:background="#99000000"
                    android:dividerHeight="1dp"
                    android:listSelector="@drawable/list_row_selector"
                    tools:ignore="InefficientWeight,NestedScrolling">
                </com.github.paolorotolo.expandableheightlistview.ExpandableHeightListView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ratingwigetfield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_below="@+id/androidcartitems"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/ratewigetopen"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@color/white"
                    android:text="@string/rate"/>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
